# devops-engineer-spts

./: .gitignore  README.md
app/: .env.example  README.md  pyproject.toml
app/src/app/common/: settings.py
app/src/app/config/: db.py  di.py  settings.py
app/src/app/domain/: session.py
app/src/app/domain/models/: activity.py
app/src/app/infra/: migrations.py  session.py
app/src/app/ui/: asgi.py
app/src/app/ui/routers/: activity.py
app/src/entrypoints/: asgi.py  asgi_dev.py
static-content/: index.html
